--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
 		</javac>
 	</target>
 	
-	<target name="war" depends="compile">
+	<target name="war" depends="jar", "compile">
 		<war destfile="dist/myweb.war" webxml="WebContent/WEB-INF/web.xml">
 			<fileset dir="WebContent"/>
 			<lib dir="WebContent/WEB-INF/lib"/>
@@ -26,9 +26,14 @@
 		</war>
 	</target>
 	
-	<!--<target name="clean">
+	<target name="jar" depends="compile">
+		<jar destfile="dist/web.jar"
+    		 basedir="build/classes"/>
+	</target>
+	
+	<target name="clean">
 		<delete dir="dist" />
 		<delete dir="build" />
-	</target>-->
+	</target>
 	
 </project>
