--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
 		</javac>
 	</target>
 	
-	<target name="war" depends="jar", "compile">
+	<target name="war" depends="jar">
 		<war destfile="dist/myweb.war" webxml="WebContent/WEB-INF/web.xml">
 			<fileset dir="WebContent"/>
 			<lib dir="WebContent/WEB-INF/lib"/>
